updated link on index

--- a/Index.html
+++ b/Index.html
@@ -52,7 +52,7 @@ p {
 
 <ul>
   <li><a class="active" href="index.html">Index</a></li>
-  <li><a href="interestinIT.html">Interest in IT</a></li>
+  <li><a href="InterestinIT.html">Interest in IT</a></li>
   <li><a href="idealjob.html">Ideal Job</a></li>
   <li><a href="profile.html">Profile</a></li>
   <li><a href="projectidea.html">Project Idea</a></li>
