--- a/references.html
+++ b/references.html
@@ -66,6 +66,12 @@ Andracheck, M 2013, 'What software is needed to build android os applications', 
 Sinicki, A 2019, 'I want to develop android apps — what languages should i learn?', <i>Androidauthority.com</i>, August 10, viewed 18 June 2020, https://www.androidauthority.com/develop-android-apps-languages-learn-391008/<br>
     <br>
     W3schools 1999, 'the world's largest web developer site', <i>https://w3schools.com</i> viewed 14 June 2020.
+    <br>
+    <br>
+    Online Personality Test 2020, 'personality, psychology, self development', <i>https://www.onlinepersonalitytests.org/</i>, viewed 14 June 2020.
+    <br>
+    <br>
+    Education Planner 2020, <i> https://educationplanner.org </i> viewed June 14 2020, http://www.educationplanner.org/students/self-assessments/learning-styles-quiz.shtml
       </p>
   </body>
 </html>
