--- a/interestinit.html
+++ b/interestinit.html
@@ -52,7 +52,7 @@ p {
 <body>
 
 <ul>
-  <li><a href="index.html">Index</a></li>
+  <li><a href="Index.html">Index</a></li>
   <li><a class="active" href="interestinIT.html">Interest in IT</a></li>
   <li><a href="idealjob.html">Ideal Job</a></li>
   <li><a href="profile.html">Profile</a></li>
