--- a/references.html
+++ b/references.html
@@ -51,7 +51,7 @@ p {
 </style>
 <body>
 <ul>
-  <li><a href="index.html">Index</a></li>
+  <li><a href="Index.html">Index</a></li>
   <li><a href="interestinIT.html">Interest in IT</a></li>
   <li><a href="idealjob.html">Ideal Job</a></li>
   <li><a href="profile.html">Profile</a></li>
