--- a/interestinit.html
+++ b/interestinit.html
@@ -53,7 +53,7 @@ p {
 
 <ul>
   <li><a href="Index.html">Index</a></li>
-  <li><a class="active" href="interestinIT.html">Interest in IT</a></li>
+  <li><a class="active" href="InterestinIT.html">Interest in IT</a></li>
   <li><a href="idealjob.html">Ideal Job</a></li>
   <li><a href="profile.html">Profile</a></li>
   <li><a href="projectidea.html">Project Idea</a></li>
