--- a/profile.html
+++ b/profile.html
@@ -52,7 +52,7 @@ p {
 <body>
 <ul>
   <li><a href="Index.html">Index</a></li>
-  <li><a href="interestinIT.html">Interest in IT</a></li>
+  <li><a href="InterestinIT.html">Interest in IT</a></li>
   <li><a href="idealjob.html">Ideal Job</a></li>
   <li><a class="active" href="profile.html">Profile</a></li>
   <li><a href="projectidea.html">Project Idea</a></li>
