--- a/projectidea.html
+++ b/projectidea.html
@@ -53,7 +53,7 @@ p {
 
 <ul>
   <li><a href="index.html">Index</a></li>
-  <li><a href="interestinIT.html">Interest in IT</a></li>
+  <li><a href="interestinit.html">Interest in IT</a></li>
   <li><a href="idealjob.html">Ideal Job</a></li>
   <li><a href="profile.html">Profile</a></li>
   <li><a class="active" href="projectidea.html">Project Idea</a></li>
