updated img links

--- a/idealjob.html
+++ b/idealjob.html
@@ -68,7 +68,7 @@ I currently have a strong practical technical background, effective time managem
 I plan on working through my Bachelor of IT to completion through RMIT as a first step whilst also developing my skills through my current IT support role to better prepare myself and better the theory behind my practical technical knowledge to place me in a better position to be able to apply for roles such as this in the future. <p>
   <br>
   <br>
-  <center><img src="job.jpg" alt="Infrastructure Manager">
-      <center><img src="job2.jpg" alt="Infrastructure Manager">
+  <center><img src="job.JPG" alt="Infrastructure Manager">
+      <center><img src="job2.JPG" alt="Infrastructure Manager">
   </body>
 </html>
