added spoiler tag

--- a/Index.html
+++ b/Index.html
@@ -47,6 +47,15 @@ li a:hover:not(.active) {
 p {
   margin-left:80px;
 }
+      a:hover {
+  background-color: white;
+          color: black;
+}
+      
+      c {
+          background-color: black;
+          color: black;
+      }
 </style>
 <body>
 
@@ -70,7 +79,7 @@ p {
     <br>
     <p style="font-family:Arial"> Twenty six years old and from Townsville in Far North
       Queensland studying my Bachelor of IT through RMIT. I've worked in the Support Helpdesk side of the IT world for a total of 7 years now.<br>
-        <br>I play Runescape and have played since I was only 10 years old</p>
+        <c><a>I play Runescape and have played since I was only 10 years old</a></c>
     </center>
 
   </body>
