added ugly photo of myself to index

--- a/Index.html
+++ b/Index.html
@@ -77,9 +77,11 @@ p {
     <h3>S3857562@student.rmit.edu.au</h3>
     <br>
     <br>
+        <center><img src="me.JPG"></center>
+        <br>
     <p style="font-family:Arial"> Twenty six years old and from Townsville in Far North
       Queensland studying my Bachelor of IT through RMIT. I've worked in the Support Helpdesk side of the IT world for a total of 7 years now.<br>
-        <c><a>I play Runescape and have played since I was only 10 years old</a></c>
+        <c><a>I play Runescape and have played since I was only 10 years old</a></c><br>
     </center>
 
   </body>
